# polis-community-open-data

./: .gitignore  Makefile  README.md  conversations.csv  pyproject.toml
.github/workflows/: update-csv.yml  update-data.yml  update-repo.yml
data/24rmxr2e7k/: comments.json  conversation.json  math-pca2.json
data/2dhnep37ie/: comments.json
data/2dndr6se24/: comments.json  conversation.json  math-pca2.json  votes.json
data/2fafhz9s2m/: comments.json  conversation.json  math-pca2.json  votes.json
data/2fzs33rmbr/: comments.json  conversation.json  math-pca2.json  votes.json
data/2ku7arccjt/: comments.json  conversation.json  math-pca2.json  votes.json
data/2nuaenc9fw/: comments.json  conversation.json  math-pca2.json  votes.json
data/2rbpz7ivat/: comments.json  conversation.json  math-pca2.json  votes.json
data/2rumnecbeh/: comments.json  conversation.json  math-pca2.json
data/2upmdmyrbv/: comments.json  conversation.json  math-pca2.json  votes.json
data/2xkaetybza/: comments.json  conversation.json  math-pca2.json  votes.json
data/2yyrtwkpxt/: comments.json  conversation.json  math-pca2.json
data/33shmh9arf/: comments.json  conversation.json  math-pca2.json  votes.json
data/36jajfnhhn/: comments.json  conversation.json  math-pca2.json  votes.json
data/3akt5cdsfk/: comments.json  conversation.json
data/3atycmhmer/: comments.json  conversation.json  math-pca2.json
data/3n77nvkhri/: comments.json  conversation.json  math-pca2.json  votes.json
data/42ssceevsw/: comments.json  (+1 more)
scripts/: fetch_polis_datasets.py  update_convo_csv.py
(+206 files in other folders)
